# TEpub-Editor

./: .temp_editor.txt  package.json  test_crash.txt
src-tauri/: Cargo.toml  err.txt  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: Editor.svelte
src/routes/: +page.svelte
src/routes/epub-metadata/: +page.svelte
