[package]
name = "epub-editor"
version = "0.3.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "epub_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "TEpub-Editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# --- 新增的依赖 ---
chardetng = "0.1"
fancy-regex = "0.13"
chrono = "0.4"
md5 = "0.7"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
once_cell = "1.19"

# --- 核心算法库 ---
quick-xml = { version = "0.36", features = ["serialize"] }
rayon = "1.10"
encoding_rs = "0.8"
tempfile = "3.24.0"
walkdir = "2.5.0"
image = "0.24"

